--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.2",
     "http-errors": "^1.8.0",
     "mongoose": "^5.10.5"
   }
